--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Expense Manager</title>
   <link rel="icon" type="image/png" href="/img/favicon.png?v1" />
   <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
-  <link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Michroma|Play:700" rel="stylesheet">
 </head>
 
 <body>
